# fel-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETED.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  README.md  SECURITY.md  TODO.md  code-smell-audit.md  deny.toml  package.json
.github/workflows/: doc.yml
conformance/: IMPLEMENTATION-REPORT.md  README.md  fel-conformance.jsonl  manifest.json
docs/: SPEC.md
docs/rustdoc-md/: API.md
fuzz/: Cargo.toml  README.md  fel.dict
fuzz/fuzz_targets/: fel_budget.rs  fel_pipeline.rs  fel_structured.rs
scripts/: bundle-rustdoc-md.mjs  check-ratification.py  extract_fuzz_corpus_from_tests.py  fel-wasm-eval.mjs  fuzz_to_regression.py  seed_fuzz_corpus.py
scripts/archive/: README.md
specs/fel/: fel-grammar.md
src/: ast.rs  context_json.rs  convert.rs  dependencies.rs  environment.rs  error.rs  evaluator.rs  extensions.rs  interpolation.rs  iso_duration.rs  lexer.rs  lib.rs  parser.rs  prepare_host.rs  printer.rs  trace.rs  types.rs
src/evaluator/: budget.rs  core.rs  mod.rs  util.rs
src/evaluator/builtins/: aggregates.rs  dates.rs  helpers.rs  locale.rs  logic_types.rs  mod.rs  money.rs  numeric.rs  strings.rs
src/extensions/: catalog.rs  mod.rs  registry.rs  schema.rs  types.rs
src/extensions/catalog/: aggregate.rs  date.rs  locale.rs  logical.rs  mip.rs  money.rs  numeric.rs  repeat.rs  string.rs  type_.rs
src/testing/: mod.rs  strategies.rs
tests/: ast_proptest.proptest-regressions  ast_proptest.rs  budget_tests.rs  builtin_catalog_consistency.rs  civil_calendar_proptest.rs  concurrency_smoke.rs  decimal_properties.rs  differential_oracle.proptest-regressions  differential_oracle.rs  environment_integration_tests.rs  evaluator_edge_cases.rs  evaluator_tests.rs  fel_chaos_proptest.rs  fel_proptest.rs  function_semantics_conformance.rs  lexer_tests.rs  locale_fel_functions.rs  parser_parse_proptest.rs  parser_rejection_tests.rs  power_builtin.rs  public_conformance_corpus.rs  regex_tests.rs  schema_round_trip.rs  semantic_invariants.proptest-regressions  semantic_invariants.rs  snapshot_tests.rs  stress_tests.rs  trace_tests.rs
tests/common/: mod.rs
tests/corpus/: README.md  fuzz_regression.jsonl
tests/fixtures/: conformance.jsonl
thoughts/: 2026-05-07-coverage-audit.md  2026-05-17-open-source-w3c-architecture-audit.md
