[package]
name = "fel-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Formspec Expression Language — parser, evaluator, and dependency analysis"
repository = "https://github.com/Formspec-org/fel-core"

# fel-core extracted from formspec/crates/fel-core/ to its own top-level repo
# on 2026-05-04. Foundational substrate consumed cross-repo by formspec,
# wos-spec, and workspec-server via path = "../fel-core" sibling-coupling
# under formspec-stack until hosted publication on crates.io.

[dependencies]
intl_pluralrules = "7.0.2"
regex = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unic-langid = "0.9"

[dev-dependencies]
# None
