[package]
name = "fel-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Formspec Expression Language — parser, evaluator, and dependency analysis"
repository = "https://github.com/Formspec-org/fel-core"
homepage = "https://github.com/Formspec-org/fel-core"
documentation = "https://docs.rs/fel-core"
readme = "README.md"
keywords = ["formspec", "expression-language", "parser", "evaluator"]
categories = ["parser-implementations"]

# fel-core extracted from formspec/crates/fel-core/ to its own top-level repo
# on 2026-05-04. Foundational substrate consumed cross-repo by formspec,
# work-spec, and workspec-server via path = "../fel-core" sibling-coupling
# under formspec-stack until hosted publication on crates.io.

[dependencies]
indexmap = "2"
intl_pluralrules = "7.0.2"
proptest = { version = "1", optional = true }
regex = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
unic-langid = { version = "0.9", features = ["macros"] }

[[bin]]
name = "emit-fel-schema"
path = "src/bin/emit-fel-schema.rs"

[[bin]]
name = "emit-conformance-fixtures"
path = "src/bin/emit-conformance-fixtures.rs"
required-features = ["proptest-strategies"]

[dev-dependencies]
chrono = "0.4"
proptest = "1"
serde_json = "1"
insta = "1"

[features]
proptest-strategies = ["proptest"]
